--- a/cs1980_ws/src/virtual_gps/package.xml
+++ b/cs1980_ws/src/virtual_gps/package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>virtualGPS</name>
+  <name>virtual_gps</name>
   <version>0.0.0</version>
   <description>Simulated virtual GPS with drones - CS1980 Capstone project</description>
   <maintainer email="jjm267@pitt.edu">Jonathan Miller, Olivia Neights, Zixin Ye</maintainer>
